[package]
name = "lsystems-gui"
version = "0.1.0"
authors = ["nshcat <nshcat@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.19.0"
imgui-glfw-rs = { git = 'https://github.com/nshcat/imgui-glfw-rs', branch = "master" }
imgui = "^0.2.0"
glfw = "0.34.0"
gl = "0.14.0"
lsystems-core = { git = "https://github.com/nshcat/lsystems-core", branch = "master" }

