[package]
name = "lsystems-gui"
version = "0.1.1"
authors = ["nshcat <nshcat@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra            = "^0.19.0"
nalgebra-glm 	    = { version = "0.5.0", features = [ "serde-serialize" ] }
imgui-glfw-rs 	    = { git = 'https://github.com/nshcat/imgui-glfw-rs', branch = "master" }
imgui 			    = "^0.2.0"
glfw 			    = "0.34.0"
gl 				    = "0.14.0"
serde          	    = "1.0"
serde_derive   	    = "1.0"
serde_json          = "1.0"
nfd                 = "0.0.4"
ncollide3d          = "0.21.0"
maplit              = "1.0.2"
approx              = "0.3.2"
lsystems-core 	    = { git = "https://github.com/nshcat/lsystems-core", branch = "master", features = [ "serde-serialize" ] }

